[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
# list = "0.1.3"

# [[bin]]
# name = "guess_number_game"
# path = "examples\\guess_number_game"
# [[bin]]
# name = "formatted_print"
# path = "examples\\formatted_print"
# [[bin]]
# name = "primitives"
# path = "examples\\primitives"
# [[bin]]
# name = "types"
# path = "examples\\types"
# [[bin]]
# name = "bindings"
# path = "examples\\bindings"
